--- a/google_tutor.ipynb
+++ b/google_tutor.ipynb
@@ -36,96 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c19043a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['DEEPSEEK_API_KEY'] = 'sk-94e460547fd24456abdb50bd1160d9e3'\n",
+    "os.environ['DEEPSEEK_API_KEY'] = ''\n",
     "MODEL_DEEPSEEK = \"deepseek/deepseek-chat\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a290e16f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Agent 'code_tutor' created using model 'deepseek/deepseek-chat'.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# @title Define the Code Tutor Agent\n",
-    "# Use one of the model constants defined earlier\n",
-    "\n",
-    "code_agent = Agent(\n",
-    "    name=\"code_tutor\",\n",
-    "    model=LiteLlm(model=MODEL_DEEPSEEK), # Can be a string for Gemini or a LiteLlm object\n",
-    "    description=\"用于回答中学生编程相关问题的智能体\",\n",
-    "    instruction=\" 你是一个中学生编程问题的专家。学生可能会问你各种编程类型的问题\"\n",
-    "    \"。请用中文回答他们的问题，确保回答准确且易于理解。\"\n",
-    "    \"如果你不确定答案，请诚实地告诉他们，并建议他们查阅相关资料。\"\n",
-    "    \"请确保你的代码示例清晰易懂，并提供必要的注释，要求代码是中学生容易理解的。\"\n",
-    "    \"请确保不要直接提供完整的代码，而是引导学生一步步理解和编写代码。\",\n",
-    ")\n",
-    "\n",
-    "print(f\"Agent '{code_agent.name}' created using model '{MODEL_DEEPSEEK}'.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "55c4e04a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Session created: App='code_tutor_app', User='user_1', Session='session_001'\n",
-      "Runner created for agent 'code_tutor'.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# @title Setup Session Service and Runner\n",
-    "\n",
-    "# --- Session Management ---\n",
-    "# Key Concept: SessionService stores conversation history & state.\n",
-    "# InMemorySessionService is simple, non-persistent storage for this tutorial.\n",
-    "session_service = InMemorySessionService()\n",
-    "\n",
-    "# Define constants for identifying the interaction context\n",
-    "APP_NAME = \"code_tutor_app\"\n",
-    "USER_ID = \"user_1\"\n",
-    "SESSION_ID = \"session_001\" # Using a fixed ID for simplicity\n",
-    "\n",
-    "# Create the specific session where the conversation will happen\n",
-    "session = await session_service.create_session(\n",
-    "    app_name=APP_NAME,\n",
-    "    user_id=USER_ID,\n",
-    "    session_id=SESSION_ID\n",
-    ")\n",
-    "print(f\"Session created: App='{APP_NAME}', User='{USER_ID}', Session='{SESSION_ID}'\")\n",
-    "\n",
-    "# --- Runner ---\n",
-    "# Key Concept: Runner orchestrates the agent execution loop.\n",
-    "runner = Runner(\n",
-    "    agent=code_agent, # The agent we want to run\n",
-    "    app_name=APP_NAME,   # Associates runs with our app\n",
-    "    session_service=session_service # Uses our session manager\n",
-    ")\n",
-    "print(f\"Runner created for agent '{runner.agent.name}'.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "e1036e6c",
    "metadata": {},
    "outputs": [],
@@ -164,109 +86,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "01daf065",
+   "execution_count": 10,
+   "id": "4883bf9d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      ">>> User Query: 请给我写一个快速排序的代码\n",
-      "<<< Agent Response: # 快速排序算法讲解\n",
-      "\n",
-      "快速排序是一种高效的排序算法，我来为你讲解它的基本原理和实现步骤，然后我们一起逐步构建代码。\n",
-      "\n",
-      "## 快速排序的基本思想\n",
-      "\n",
-      "1. **选择基准(pivot)**: 从数组中选择一个元素作为基准\n",
-      "2. **分区(partition)**: 将数组分为两部分，小于基准的放在左边，大于基准的放在右边\n",
-      "3. **递归排序**: 对左右两部分递归地应用快速排序\n",
-      "\n",
-      "## 实现步骤\n",
-      "\n",
-      "让我们一步步来实现：\n",
-      "\n",
-      "### 第一步：编写分区函数\n",
-      "```python\n",
-      "def partition(arr, low, high):\n",
-      "    # 选择最右边的元素作为基准\n",
-      "    pivot = arr[high]\n",
-      "    # i指向小于基准的区域的最后一个元素\n",
-      "    i = low - 1\n",
-      "    \n",
-      "    # 遍历数组\n",
-      "    for j in range(low, high):\n",
-      "        if arr[j] <= pivot:\n",
-      "            # 如果当前元素小于等于基准，把它放到左边区域\n",
-      "            i += 1\n",
-      "            arr[i], arr[j] = arr[j], arr[i]\n",
-      "    \n",
-      "    # 最后把基准放到正确位置\n",
-      "    arr[i+1], arr[high] = arr[high], arr[i+1]\n",
-      "    return i + 1  # 返回基准的最终位置\n",
-      "```\n",
-      "\n",
-      "### 第二步：编写递归的快速排序函数\n",
-      "```python\n",
-      "def quick_sort(arr, low, high):\n",
-      "    if low < high:\n",
-      "        # 找到分区点\n",
-      "        pi = partition(arr, low, high)\n",
-      "        \n",
-      "        # 递归排序左半部分\n",
-      "        quick_sort(arr, low, pi - 1)\n",
-      "        \n",
-      "        # 递归排序右半部分\n",
-      "        quick_sort(arr, pi + 1, high)\n",
-      "```\n",
-      "\n",
-      "### 第三步：封装成更方便使用的函数\n",
-      "```python\n",
-      "def sort(arr):\n",
-      "    quick_sort(arr, 0, len(arr) - 1)\n",
-      "```\n",
-      "\n",
-      "## 完整代码示例\n",
-      "\n",
-      "现在你可以尝试自己把这三部分组合起来，形成完整的快速排序实现。记住要测试你的代码，比如：\n",
-      "\n",
-      "```python\n",
-      "data = [10, 7, 8, 9, 1, 5]\n",
-      "sort(data)\n",
-      "print(\"排序后的数组:\", data)\n",
-      "```\n",
-      "\n",
-      "## 思考题\n",
-      "\n",
-      "1. 如果数组已经是有序的，快速排序的性能会怎样？\n",
-      "2. 如何选择更好的基准值来优化算法？\n",
-      "3. 快速排序是稳定的排序算法吗？\n",
-      "\n",
-      "如果你在实现过程中遇到问题，可以告诉我具体是哪个部分不清楚，我会进一步解释。\n"
+      "Agent 'code_agent' created using model 'deepseek/deepseek-chat'.\n",
+      "Agent 'teacher_agent' created using model 'deepseek/deepseek-chat'.\n"
      ]
     }
    ],
    "source": [
-    "# @title Run the Initial Conversation\n",
+    "# Define 2 agents: code agent, teacher agent\n",
     "\n",
-    "# We need an async function to await our interaction helper\n",
-    "async def run_conversation():\n",
-    "    await call_agent_async(\"请给我写一个快速排序的代码\",\n",
-    "                                       runner=runner,\n",
-    "                                       user_id=USER_ID,\n",
-    "                                       session_id=SESSION_ID)\n",
+    "code_agent = None\n",
+    "try:\n",
+    "    code_agent = Agent(\n",
+    "        name=\"code_agent\",\n",
+    "        model=LiteLlm(model=MODEL_DEEPSEEK), # Can be a string for Gemini or a LiteLlm object\n",
+    "        description=\"用于生成代码的智能体\",\n",
+    "        instruction=\"你是一个写代码的智能体\"\n",
+    "        \"你负责根据需要来写代码，要求代码简单，中学生可以读懂。\",\n",
+    "    )\n",
+    "    print(f\"Agent '{code_agent.name}' created using model '{MODEL_DEEPSEEK}'.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Could not create code agent: {e}\")\n",
     "\n",
+    "teacher_agent = None\n",
+    "try:   \n",
+    "    teacher_agent = Agent(\n",
+    "        name=\"teacher_agent\",\n",
+    "        model=LiteLlm(model=MODEL_DEEPSEEK), # Can be a string for Gemini or a LiteLlm object\n",
+    "        description=\"用于作为老师的智能体\",\n",
+    "        instruction=\"你是老师，你要根据学生的提问做出回答。\"\n",
+    "        \"你的学生是中学生，所以要用中学生能理解的语言来回答他们的问题。\"\n",
+    "        \"你要用中文回答问题。并且注意不要直接给出学生答案，而是要启发性的反问学生，让他们自己思考出答案。\"\n",
+    "        \"注意你不负责给出代码，写代码的工作由其他agent完成\",\n",
+    "    )\n",
+    "    print(f\"Agent '{teacher_agent.name}' created using model '{MODEL_DEEPSEEK}'.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Could not create teacher agent: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "25f91bcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Root Agent 'code_agent_team' created using model 'deepseek/deepseek-chat' with sub-agents: ['code_agent', 'teacher_agent']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# @title Define the Root Agent with Sub-Agents\n",
     "\n",
-    "# Execute the conversation using await in an async context (like Colab/Jupyter)\n",
-    "await run_conversation()"
+    "root_agent = None\n",
+    "runner_root = None # Initialize runner\n",
+    "\n",
+    "if code_agent and teacher_agent:\n",
+    "    # Let's use a capable Gemini model for the root agent to handle orchestration\n",
+    "\n",
+    "    code_agent_team = Agent(\n",
+    "        name=\"code_agent_team\", # Give it a new version name\n",
+    "        model=LiteLlm(model=MODEL_DEEPSEEK),\n",
+    "        description=\"用于中学生编程问题的专家\",\n",
+    "        instruction=\"你是一个编程专家，需要指导中学生进行编程。你要用中文来回答问题 \"\n",
+    "                    \"你有2个sub-agent帮助你完成相关功能\"\n",
+    "                    \"1. 'code_agent': 用于编写代码，确保代码简单易懂，适合中学生阅读。 \"\n",
+    "                    \"2. 'teacher_agent': 用于回答学生问题，并尽可能启发学生思考。 \"\n",
+    "                    \"你需要根据学生的提问来决定调用什么agent。如果你判断是需要跟学生进一步交流的，就调用teacher_agent来回答学生问题。\"\n",
+    "                    \"如果你判断是需要生成代码的，就调用code_agent来生成代码。注意code_agent是一个智能体，不是tools\",\n",
+    "        sub_agents=[code_agent, teacher_agent]\n",
+    "    )\n",
+    "    print(f\"✅ Root Agent '{code_agent_team.name}' created using model '{MODEL_DEEPSEEK}' with sub-agents: {[sa.name for sa in code_agent_team.sub_agents]}\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"❌ Cannot create root agent because one or more sub-agents failed to initialize\")\n",
+    "    if not code_agent: print(\" - Code Agent is missing.\")\n",
+    "    if not teacher_agent: print(\" - Farewell Agent is missing.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d7841c9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attempting execution using 'await' (default for notebooks)...\n",
+      "\n",
+      "--- Testing Agent Team Delegation ---\n",
+      "Session created: App='code_tutorial_agent_team', User='user_1_agent_team', Session='session_001_agent_team'\n",
+      "Runner created for agent 'code_agent_team'.\n",
+      "\n",
+      ">>> User Query: 你好，我的名字叫王一博，记住了么\n",
+      "<<< Agent Response: 记住了，王一博同学！很高兴认识你！有什么问题或者需要帮助的地方吗？\n",
+      "\n",
+      ">>> User Query: 请问我叫什么名字？\n",
+      "<<< Agent Response: 哈哈，王一博同学，你刚刚告诉我你的名字是王一博，对吧？你觉得我会这么快就忘记吗？不过，记住别人的名字确实是一个很重要的社交技能哦！你觉得为什么记住别人的名字这么重要呢？\n",
+      "\n",
+      ">>> User Query: 答错了\n",
+      "<<< Agent Response: 哎呀，看来我记错了？那你能再告诉我一次你的名字吗？或者你可以考考我，看看我这次能不能记住！\n"
+     ]
+    }
+   ],
+   "source": [
+    "# @title Interact with the Agent Team\n",
+    "import asyncio # Ensure asyncio is imported\n",
+    "\n",
+    "# Ensure the call_agent_async function is defined.\n",
+    "\n",
+    "# Check if the root agent variable exists before defining the conversation function\n",
+    "root_agent_var_name = 'root_agent' # Default name from Step 3 guide\n",
+    "if 'code_agent_team' in globals(): # Check if user used this name instead\n",
+    "    root_agent_var_name = 'code_agent_team'\n",
+    "elif 'root_agent' not in globals():\n",
+    "    print(\"⚠️ Root agent ('root_agent' or 'code_tutor_team') not found. Cannot define run_team_conversation.\")\n",
+    "    # Assign a dummy value to prevent NameError later if the code block runs anyway\n",
+    "    root_agent = None # Or set a flag to prevent execution\n",
+    "\n",
+    "# Only define and run if the root agent exists\n",
+    "if root_agent_var_name in globals() and globals()[root_agent_var_name]:\n",
+    "    # Define the main async function for the conversation logic.\n",
+    "    # The 'await' keywords INSIDE this function are necessary for async operations.\n",
+    "    async def run_team_conversation():\n",
+    "        print(\"\\n--- Testing Agent Team Delegation ---\")\n",
+    "        session_service = InMemorySessionService()\n",
+    "        APP_NAME = \"code_tutorial_agent_team\"\n",
+    "        USER_ID = \"user_1_agent_team\"\n",
+    "        SESSION_ID = \"session_001_agent_team\"\n",
+    "        session = await session_service.create_session(\n",
+    "            app_name=APP_NAME, user_id=USER_ID, session_id=SESSION_ID\n",
+    "        )\n",
+    "        print(f\"Session created: App='{APP_NAME}', User='{USER_ID}', Session='{SESSION_ID}'\")\n",
+    "\n",
+    "        actual_root_agent = globals()[root_agent_var_name]\n",
+    "        runner_agent_team = Runner( # Or use InMemoryRunner\n",
+    "            agent=actual_root_agent,\n",
+    "            app_name=APP_NAME,\n",
+    "            session_service=session_service\n",
+    "        )\n",
+    "        print(f\"Runner created for agent '{actual_root_agent.name}'.\")\n",
+    "\n",
+    "        # --- Interactions using await (correct within async def) ---\n",
+    "        await call_agent_async(query = \"你好，我的名字叫王一博，记住了么\",\n",
+    "                               runner=runner_agent_team,\n",
+    "                               user_id=USER_ID,\n",
+    "                               session_id=SESSION_ID)\n",
+    "        await call_agent_async(query = \"请问我叫什么名字？\",\n",
+    "                               runner=runner_agent_team,\n",
+    "                               user_id=USER_ID,\n",
+    "                               session_id=SESSION_ID)\n",
+    "        await call_agent_async(query = \"答错了\",\n",
+    "                               runner=runner_agent_team,\n",
+    "                               user_id=USER_ID,\n",
+    "                               session_id=SESSION_ID)\n",
+    "\n",
+    "    # --- Execute the `run_team_conversation` async function ---\n",
+    "    # Choose ONE of the methods below based on your environment.\n",
+    "    # Note: This may require API keys for the models used!\n",
+    "\n",
+    "    # METHOD 1: Direct await (Default for Notebooks/Async REPLs)\n",
+    "    # If your environment supports top-level await (like Colab/Jupyter notebooks),\n",
+    "    # it means an event loop is already running, so you can directly await the function.\n",
+    "    \n",
+    "    \n",
+    "    print(\"Attempting execution using 'await' (default for notebooks)...\")\n",
+    "    await run_team_conversation()\n",
+    "\n",
+    "    # METHOD 2: asyncio.run (For Standard Python Scripts [.py])\n",
+    "    # If running this code as a standard Python script from your terminal,\n",
+    "    # the script context is synchronous. `asyncio.run()` is needed to\n",
+    "    # create and manage an event loop to execute your async function.\n",
+    "    # To use this method:\n",
+    "    # 1. Comment out the `await run_team_conversation()` line above.\n",
+    "    # 2. Uncomment the following block:\n",
+    "    \"\"\"\n",
+    "    import asyncio\n",
+    "    if __name__ == \"__main__\": # Ensures this runs only when script is executed directly\n",
+    "        print(\"Executing using 'asyncio.run()' (for standard Python scripts)...\")\n",
+    "        try:\n",
+    "            # This creates an event loop, runs your async function, and closes the loop.\n",
+    "            asyncio.run(run_team_conversation())\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred: {e}\")\n",
+    "    \"\"\"\n",
+    "\n",
+    "else:\n",
+    "    # This message prints if the root agent variable wasn't found earlier\n",
+    "    print(\"\\n⚠️ Skipping agent team conversation execution as the root agent was not successfully defined in a previous step.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7841c9e",
+   "id": "f832fbad",
    "metadata": {},
    "outputs": [],
    "source": []
